syntax = "proto3";

package protochain.solana.account.v1;

option go_package = "github.com/BRBussy/protochain/lib/go/protochain/solana/account/v1;account_v1";

/*
   Account is a solana account.
*/
message Account {
  string address = 1; // Base58-encoded account address
  uint64 lamports = 2; // Account balance in lamports (1 SOL = 1 billion lamports)
  string owner = 3; // Base58-encoded owner program address
  bool executable = 4; // Whether this account contains an executable program
  string data = 5; // Account data as JSON string
  uint64 rent_epoch = 6; // Epoch at which this account will next owe rent
}
