syntax = "proto3";

package protosol.solana.account.v1;

option go_package = "github.com/BRBussy/protosol/lib/go/protosol/solana/account/v1;account_v1";

import "protosol/solana/account/v1/account.proto";
import "protosol/solana/type/v1/keypair.proto";
import "protosol/solana/type/v1/commitment_level.proto";

service Service {
  rpc GetAccount(GetAccountRequest) returns (protosol.solana.account.v1.Account);
  rpc GenerateNewKeyPair(GenerateNewKeyPairRequest) returns (GenerateNewKeyPairResponse);
  rpc FundNative(FundNativeRequest) returns (FundNativeResponse);
}

message GetAccountRequest {
  string address = 1;  // Base58-encoded account address to fetch from Solana network
  protosol.solana.type.v1.CommitmentLevel commitment_level = 2;  // Optional commitment level for account queries
}

message GenerateNewKeyPairRequest {
  string seed = 1; // Optional deterministic seed (hex-encoded)
}

message GenerateNewKeyPairResponse {
  protosol.solana.type.v1.KeyPair key_pair = 1;
}

message FundNativeRequest {
  string address = 1;  // Target address for funding (Base58)
  string amount = 2;   // Amount in lamports as string
  protosol.solana.type.v1.CommitmentLevel commitment_level = 3;  // Optional commitment level for funding confirmation
}

message FundNativeResponse {
  string signature = 1; // Transaction signature of airdrop
}