syntax = "proto3";

package protosol.solana.type.v1;

option go_package = "github.com/BRBussy/protosol/lib/go/protosol/solana/type/v1;solana_type_v1";

// KeyPair represents a Solana cryptographic key pair for transaction signing
message KeyPair {
  string public_key = 1;   // Base58 encoded public key 
  string private_key = 2;  // Hex encoded private key (32 bytes)
}
